<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.v7.widget.CardView
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="8dp"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/labelStyle"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/llUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:visibility="gone">

                    <TextView
                        style="@style/labelStyle"
                        android:layout_marginTop="@dimen/login_activity_margin"
                        android:text="@string/login_activity_user_name_label" />

                    <EditText
                        android:id="@+id/etUserName"
                        style="@style/editTextStyle"
                        android:hint="@string/login_activity_user_name_edittext" />


                </LinearLayout>

                <TextView
                    style="@style/labelStyle"
                    android:text="@string/login_activity_email_label" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/editTextStyle"
                    android:hint="@string/login_activity_email_edittext" />

                <TextView
                    style="@style/labelStyle"
                    android:layout_marginTop="@dimen/login_activity_margin"
                    android:text="@string/login_activity_password_label" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/editTextStyle"
                    android:hint="@string/login_activity_password_edittext"
                    android:inputType="textPassword" />


                <LinearLayout
                    android:id="@+id/llRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/labelStyle"
                        android:layout_marginTop="@dimen/login_activity_margin"
                        android:text="@string/login_activity_repeat_password_label" />

                    <EditText
                        android:id="@+id/etRepeatPassword"
                        style="@style/editTextStyle"
                        android:hint="@string/login_activity_password_repeat_edittext"
                        android:inputType="textPassword"
                        android:layout_marginBottom="8dp"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/button"
                    android:layout_marginTop="16dp"
                    android:text="@string/login_activity_button_login" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

</ScrollView>
